[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "mobilyze"
description = "A Python package harnessing mobility data to quantify movement intensity"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["mobility"]
authors = [{ name = "Development Data Group", email = "datalab@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = ["pandas>=2", "dask>=2024.1.0"]
[project.optional-dependencies]
docs = [
	"docutils==0.20.1",    # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book >=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/mobilyze"
"Bug Reports" = "https://github.com/datapartnership/mobilyze/issues"
"Source" = "https://github.com/datapartnership/mobilyze"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = ","

[tool.hatch.build.targets.wheel]
packages = ["src/*"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
